Run drools wit Java 21