@@ -1,42 +1,54 @@
 package com.drools.perf.test;
 
+import java.util.List;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicInteger;
+
 import com.drools.perf.test.helper.DroolsHelper;
 import com.drools.perf.test.helper.Generator;
 import com.drools.perf.test.model.Subscriber;
 import org.junit.Test;
-import org.openjdk.jmh.annotations.*;
+import org.openjdk.jmh.annotations.Benchmark;
+import org.openjdk.jmh.annotations.BenchmarkMode;
+import org.openjdk.jmh.annotations.Fork;
+import org.openjdk.jmh.annotations.Mode;
+import org.openjdk.jmh.annotations.OutputTimeUnit;
+import org.openjdk.jmh.annotations.Param;
+import org.openjdk.jmh.annotations.Scope;
+import org.openjdk.jmh.annotations.Setup;
+import org.openjdk.jmh.annotations.State;
+import org.openjdk.jmh.annotations.TearDown;
+import org.openjdk.jmh.annotations.Threads;
 import org.openjdk.jmh.profile.AsyncProfiler;
 import org.openjdk.jmh.runner.Runner;
 import org.openjdk.jmh.runner.options.Options;
 import org.openjdk.jmh.runner.options.OptionsBuilder;
 
-import java.util.List;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicInteger;
+import static org.openjdk.jmh.annotations.Threads.MAX;
 
-@Threads(10)
+@Threads(MAX)
 @BenchmarkMode(Mode.Throughput)
 @OutputTimeUnit(TimeUnit.SECONDS)
 //@BenchmarkMode(Mode.AverageTime)
-//@OutputTimeUnit(TimeUnit.MICROSECONDS)
+//@OutputTimeUnit(TimeUnit.MILLISECONDS)
 
 @State(Scope.Benchmark)
-@Fork(value = 2, jvmArgs = {"-Xms10G",
-        "-Xmx10G",
+@Fork(value = 2, jvmArgs = {"-Xms20G",
+    "-Xmx20G",
 ////        "-XX:+UseParallelGC",
-//        "-XX:ConcGCThreads=5",
+//        "-XX:ConcGCThreads=15",
 //        "-XX:ParallelGCThreads=5",
-//        "-XX:+UseZGC",
-        "-XX:+UseShenandoahGC",
-////        "-XX:ShenandoahGCMode=iu",
+//        "-XX:+UseZGC","-XX:+ZGenerational",
+//        "-XX:+UseShenandoahGC",
+//        "-XX:ShenandoahGCMode=iu",
 ////        "-XX:+UnlockExperimentalVMOptions",
         "-XX:+UseNUMA",
-        "-XX:-UseBiasedLocking",
+//        "-XX:-UseBiasedLocking",
         "-XX:+UseLargePages", "-XX:+UseTransparentHugePages",
 //
 ////        "-XX:+UsePerfData",
-////        "-XX:MaxMetaspaceSize=1G", "-XX:MetaspaceSize=256M",
-//        "-Xlog:gc*,gc+ref*,gc+ergo*,gc+heap*,gc+stats*,gc+compaction*,gc+age*:logs/gc.log:time,pid,tags:filecount=25,filesize=30m"
+    "-XX:MaxMetaspaceSize=1G", "-XX:MetaspaceSize=256M",
+    "-Xlog:gc*,gc+ref*,gc+ergo*,gc+heap*,gc+stats*,gc+compaction*,gc+age*:logs/gc.log:time,pid,tags:filecount=25,filesize=30m"
 }
 )
 public class DroolsBenchmarkTest {
@@ -47,10 +59,17 @@ public class DroolsBenchmarkTest {
     private int sessionPool;
     //    @Param({"false", "true"})
     private boolean threadLocal;
+    @Param({"false", "true"})
+    private boolean useCanonicalModel;
 
     @Setup
     public void loadData() throws Exception {
-        DroolsHelper.init(sessionPool, threadLocal);
+        System.err.println("aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa ====" + System.getProperty("drools.useEagerSegmentCreation"));
+        if (System.getProperty("drools.useEagerSegmentCreation") == null) {
+            System.setProperty("drools.useEagerSegmentCreation", "true");
+        }
+        System.err.println("bbbbbbbbbbbbbbbb ====" + System.getProperty("drools.useEagerSegmentCreation"));
+        DroolsHelper.init(sessionPool, threadLocal, useCanonicalModel);
 //        DroolsHelper.threadLocal = threadLocal;
         subscribers = Generator.getPreGeneratedSubscribers();
     }
@@ -78,6 +97,7 @@ public class DroolsBenchmarkTest {
     }
 
     public static void main(String[] args) throws Exception {
+        System.setProperty("drools.useEagerSegmentCreation", "true");
         if (args == null || args.length == 0)
             args = new String[]{"15"};
 
@@ -86,11 +106,11 @@ public class DroolsBenchmarkTest {
         final Options options = new OptionsBuilder()
                 .include(DroolsBenchmarkTest.class.getSimpleName())
                 .forks(1)
-                .warmupIterations(5)
-                .measurementIterations(10)
-                .threads(Integer.parseInt(args[0]))
+            .warmupIterations(2)
+            .measurementIterations(5)
+            .threads(Runtime.getRuntime().availableProcessors() - 1)
 //                .addProfiler(GCProfiler.class)
-//                .addProfiler(AsyncProfiler.class, "output=flamegraph;event=cpu;allkernel=true;direction=forward;interval=50000")
+            .addProfiler(AsyncProfiler.class, "output=flamegraph;event=cpu;allkernel=true;direction=forward;interval=50000")
 //                .addProfiler(LinuxPerfProfiler.class)
 //                .addProfiler(LinuxPerfC2CProfiler.class)
                 .build();
